--- a/views/mixins/navbar.pug
+++ b/views/mixins/navbar.pug
@@ -4,16 +4,22 @@ mixin navbar(logged, user)
     nav(class="navbar navbar-default")
         div(class="container-fluid")
             div(class="navbar-header")
-                a(class="navbar-brand" href="/") Pinterest Clone
+              a(class="navbar-brand" href="/") Pinterest Clone
+            if logged
+              form(class="navbar-form navbar-left")
+                div(class="form-group")
+                  input(type="text" class="form-control" placeholder="Title")
+                  input(type="text" class="form-control" placeholder="Link")
+                button(type="button" class="btn btn-default") Add Image
             div(class="collapse navbar-collapse")
-                ul(class="nav navbar-nav navbar-right")
-                    if logged
-                        li
-                          a(href="/" + user + "/profile" class="navbar-link") Welcome #{displayName}
-                        li
-                          img(src=avatar class="img-responsive")
-                    else
-                        li
-                            a(href="/auth/twitter")
-                                img(src="/images/sprite.png" style="padding-right: 5px")
-                                | Sign In With Twitter
+              ul(class="nav navbar-nav navbar-right")
+                  if logged
+                      li
+                        a(href="/" + user + "/profile" class="navbar-link") Welcome #{displayName}
+                      li
+                        img(src=avatar class="img-responsive")
+                  else
+                      li
+                          a(href="/auth/twitter")
+                            img(src="/images/sprite.png" style="padding-right: 5px")
+                            | Sign In With Twitter
