--- a/views/mixins/head.pug
+++ b/views/mixins/head.pug
@@ -5,3 +5,4 @@ mixin head(pageStyle)
         meta(content="text/html;charset=utf-8", http-equiv="Content-Type")
         title Pinterest Clone
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css")
+        link(rel="stylesheet" href="/css/style.css" type="text/css")
