--- a/views/mixins/navbar.pug
+++ b/views/mixins/navbar.pug
@@ -6,11 +6,11 @@ mixin navbar(logged, user)
             div(class="navbar-header")
               a(class="navbar-brand" href="/") Pinterest Clone
             if logged
-              form(class="navbar-form navbar-left")
+              form(action="/" + user + "/addImage" method="post" class="navbar-form navbar-left")
                 div(class="form-group")
-                  input(type="text" class="form-control" placeholder="Title")
-                  input(type="text" class="form-control" placeholder="Link")
-                button(type="button" class="btn btn-default") Add Image
+                  input(type="text" name="title" class="form-control" placeholder="Title")
+                  input(type="text" name="url" class="form-control" placeholder="Link")
+                button(type="submit" class="btn btn-default") Add Image
             div(class="collapse navbar-collapse")
               ul(class="nav navbar-nav navbar-right")
                   if logged
