--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
 .grid {
-  max-width: 1100px;
+  max-width: 1000px;
 }
 
+/* clearfix */
 .grid:after {
   content: '';
   display: block;
@@ -12,11 +13,10 @@
   width: 200px;
   height: auto;
   float: left;
+  box-sizing: border-box;
   padding: 10px;
-  margin: 10px;
   background-color: rgba(211,211,211, 0.5);
-  border-radius: 5px;
-  border: 2px solid DarkGray;
+  border: 5px solid white;
 }
 
 .grid-item h3 {
@@ -24,5 +24,5 @@
 }
 
 .grid-item h6 {
-  text-align: center;
+  cursor: pointer;
 }
